# homework_16_venv_poetry

./: README.md
with_pip/: requirements.txt
with_pipenv/: Pipfile  requirements.txt
with_poetry/: pyproject.toml
