[project]
name = "with-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Ignatov",email = "hiller994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selene (>=1.0.2,<2.0.0)",
    "selenium (>=4.30.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

